# wireshark-plugin-sandbox

./: .gitignore  CMakeLists.txt  README  README.md  build-in-docker.sh  build.sh  hello.c  my-math.c  my-math.h  my-math.lua  test.sh  wireshark-lua.sh  wireshark-native.sh  wireshark.sh
config/: decode_as_entries  dfilter_buttons
docker/: Dockerfile  build.sh
example-dumps/lua/: batch-002-buffer-0005.json  batch-002-mtu-0068.txt  batch-002.json  single-requests-005.json  single-requests-005.txt
example-dumps/native/: batch-002-buffer-0005.json  batch-002-buffer-0005.txt  batch-002-mtu-0068.json  batch-002.txt  single-requests-005.json
examples/: batch-002-buffer-0005.pcapng  batch-002-mtu-0068.pcapng  batch-002.pcapng
test/: test.pcapng
